--- a/beancopy/pom.xml
+++ b/beancopy/pom.xml
@@ -1,23 +1,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>virtual-product</artifactId>
-        <groupId>com.vip.mobile</groupId>
-        <version>1.0.2-SNAPSHOT</version>
-        <relativePath>../virtual-product-service/pom.xml</relativePath>
+        <artifactId>code</artifactId>
+        <groupId>com.brucefan.code</groupId>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.brucefan.code</groupId>
-    <artifactId>code</artifactId>
+    <artifactId>beancopy</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <modules>
-        <module>pattern</module>
-        <module>beancopy</module>
-    </modules>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
-    <name>code</name>
+    <name>beancopy</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -30,6 +25,17 @@
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ma.glasnost.orika</groupId>
+            <artifactId>orika-core</artifactId>
+            <version>1.4.2</version>
         </dependency>
 
     </dependencies>
