--- a/pattern/pom.xml
+++ b/pattern/pom.xml
@@ -1,23 +1,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>virtual-product</artifactId>
-        <groupId>com.vip.mobile</groupId>
-        <version>1.0.2-SNAPSHOT</version>
-        <relativePath>../virtual-product-service/pom.xml</relativePath>
+        <artifactId>code</artifactId>
+        <groupId>com.brucefan.code</groupId>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.brucefan.code</groupId>
-    <artifactId>code</artifactId>
+    <artifactId>pattern</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <modules>
-        <module>pattern</module>
-        <module>beancopy</module>
-    </modules>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
-    <name>code</name>
+    <name>pattern</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -31,6 +26,5 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 </project>
