--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>virtual-product</artifactId>
-        <groupId>com.vip.mobile</groupId>
-        <version>1.0.2-SNAPSHOT</version>
-        <relativePath>../virtual-product-service/pom.xml</relativePath>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.brucefan.code</groupId>
@@ -14,6 +8,7 @@
     <modules>
         <module>pattern</module>
         <module>beancopy</module>
+        <module>java8</module>
     </modules>
     <packaging>pom</packaging>
 
