--- a/java8/pom.xml
+++ b/java8/pom.xml
@@ -36,5 +36,10 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.1.2</version>
+        </dependency>
     </dependencies>
 </project>
